# hermes-weaviate-engram

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: tests.yml
tests/: conftest.py  test_provider.py
weaviate_engram/: __init__.py  client.py  plugin.yaml
