[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-weaviate-engram"
version = "0.1.0"
description = "Weaviate Engram memory provider plugin for Hermes Agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Marcin Antas", email = "marcin@weaviate.io" },
]
keywords = ["hermes", "weaviate", "engram", "memory", "agent", "llm"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "weaviate-engram>=0.6,<1",
]

[project.urls]
Homepage = "https://github.com/weaviate/hermes-weaviate-engram"
Issues = "https://github.com/weaviate/hermes-weaviate-engram/issues"

# Distribution model: this repo is installed by symlinking
# ./weaviate_engram into ~/.hermes/plugins/ via install.sh. pyproject.toml
# exists for the dev environment (tests + CI); we don't publish a wheel
# from it (yet).
[tool.setuptools.packages.find]
include = ["weaviate_engram*"]

# Dev environment is managed by uv. Run `uv sync` to materialise .venv with
# the runtime SDK plus everything below. hermes-agent is pulled from git
# because the tests need `agent.memory_provider.MemoryProvider` and
# `tools.registry.tool_error` — both live in the hermes-agent core, not on
# PyPI. If you have a local hermes-agent checkout, run
# `uv pip install -e ../hermes-agent` afterwards to override with editable.
#
# Uses PEP 735 dependency groups (https://peps.python.org/pep-0735/) — the
# modern replacement for `[tool.uv].dev-dependencies`. uv installs the
# `dev` group by default on `uv sync`; CI uses `uv sync --locked` to refuse
# any drift from uv.lock.
[dependency-groups]
dev = [
    "pytest>=8,<10",
    "pytest-timeout>=2.3,<3",
    "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git@main",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
timeout = 30
